[gd_scene load_steps=17 format=3 uid="uid://brf2rcwuan4ra"]

[ext_resource type="Script" path="res://Card.gd" id="1_jq631"]
[ext_resource type="Texture2D" uid="uid://d2nxcea7fbsj8" path="res://assets/card_template.png" id="2_ucxg3"]
[ext_resource type="Texture2D" uid="uid://2hirrbu6gylj" path="res://assets/playingCardBack.png" id="4_xg2wb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l271q"]
size = Vector2(106, 127)

[sub_resource type="Theme" id="Theme_0ps1e"]

[sub_resource type="Animation" id="Animation_8d84s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/CardFront:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.766667, 0.756)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/CardFront:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 1, 0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/CardFront/Rank:theme_override_colors/default_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/CardFront/Rank:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Body/CardFront/CardBack:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Body/Anim:speed_scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_2gkof"]
resource_name = "deselect"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/CardFront:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.903333, 0.890765), Vector2(0.766667, 0.756)]
}

[sub_resource type="Animation" id="Animation_l7yyi"]
resource_name = "flipDown"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/CardFront:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.766667, 0.756), Vector2(0, 0.756), Vector2(0.766667, 0.756)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/CardFront/Rank:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/CardFront/CardBack:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_n1pgq"]
resource_name = "flipUp"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/CardFront:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.766667, 0.756), Vector2(0, 0.756), Vector2(0.766667, 0.756)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/CardFront/Rank:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/CardFront/CardBack:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/Anim:speed_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [5.0, 1.0]
}

[sub_resource type="Animation" id="Animation_tqn42"]
resource_name = "hoverDelete"
loop_mode = 2
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/CardFront:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.989537),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 0, 1), Color(1, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_t3slh"]
resource_name = "hoverPlay"
loop_mode = 2
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/CardFront:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.989537),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 1, 0, 1), Color(0, 0.313726, 1, 1)]
}

[sub_resource type="Animation" id="Animation_1il3k"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/CardFront:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 1, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/CardFront:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.766667, 0.756)]
}

[sub_resource type="Animation" id="Animation_3q7ak"]
resource_name = "select"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/CardFront:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.766667, 0.756), Vector2(0.903333, 0.890765)]
}

[sub_resource type="Animation" id="Animation_vqo0r"]
resource_name = "spawn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("Body/CardFront:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.979111),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 1, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/CardFront:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.30699),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0.766667, 0.756)]
}

[sub_resource type="Animation" id="Animation_kth82"]
resource_name = "despawn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/CardFront:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.766667, 0.756), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Anim:speed_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [3.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a5t31"]
_data = {
"RESET": SubResource("Animation_8d84s"),
"deselect": SubResource("Animation_2gkof"),
"despawn": SubResource("Animation_kth82"),
"flipDown": SubResource("Animation_l7yyi"),
"flipUp": SubResource("Animation_n1pgq"),
"hoverDelete": SubResource("Animation_tqn42"),
"hoverPlay": SubResource("Animation_t3slh"),
"idle": SubResource("Animation_1il3k"),
"select": SubResource("Animation_3q7ak"),
"spawn": SubResource("Animation_vqo0r")
}

[node name="CardContainer" type="Container" groups=["CardsInPlay"]]
custom_minimum_size = Vector2(128, 192)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -96.0
offset_right = 64.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_jq631")
rank = "10"

[node name="Body" type="Area2D" parent="." groups=["CardsInPlay"]]
metadata/_edit_lock_ = true

[node name="Collision" type="CollisionShape2D" parent="Body"]
position = Vector2(64, 91.5)
shape = SubResource("RectangleShape2D_l271q")
metadata/_edit_lock_ = true

[node name="CardFront" type="Sprite2D" parent="Body"]
modulate = Color(0, 1, 0, 1)
position = Vector2(64, 96)
scale = Vector2(0.766667, 0.756)
texture = ExtResource("2_ucxg3")

[node name="Rank" type="RichTextLabel" parent="Body/CardFront"]
offset_left = -102.0
offset_top = -124.0
offset_right = 102.0
offset_bottom = -29.0
theme = SubResource("Theme_0ps1e")
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 79
bbcode_enabled = true
text = "[center]2 \\u2667[/center]"
scroll_active = false

[node name="CardBack" type="Sprite2D" parent="Body/CardFront"]
visible = false
position = Vector2(7.39098e-06, 1.62125e-05)
scale = Vector2(1.02414, 1.02414)
texture = ExtResource("4_xg2wb")

[node name="Anim" type="AnimationPlayer" parent="Body"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_a5t31")
}

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="animation_finished" from="Body/Anim" to="." method="_on_anim_animation_finished"]
